--- a/main.html
+++ b/main.html
@@ -10,5 +10,11 @@
     <header class="bg-primary text-white text-center py-4">
         <h1>Veranstaltungen Zwingenberg</h1>
     </header>
+    
+    <div class="jumbotron text-center">
+      <h1 class="display-4">Welcome to Our Website</h1>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
+  </div>
   </body>
 </html>
