--- a/impressum.html
+++ b/impressum.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
     <title>Impressum</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -33,8 +34,8 @@
 
         <section class="mt-4">
             <h2>Realisierung</h2>
-            <p>DHBW <br>
-            Studio für Webdesign</p>
+            <p>DHBW Mannheim<br>
+            WWI-21-EG/EH MIT</p>
         </section>
 
         <section class="mt-4">
@@ -45,6 +46,14 @@
         <section class="mt-4">
             <h2>Urheberrechte und sonstige Sonderschutzrechte</h2>
             <p>Der Inhalt der Website der Stadt Zwingenberg ist urheberrechtlich geschützt. Grafiken, Texte, Logos, Bilder usw. dürfen nur nach schriftlicher Genehmigung durch die Stadt Zwingenberg heruntergeladen, vervielfältigt, kopiert, geändert, veröffentlicht, versendet, übertragen oder in sonstiger Form genutzt werden. Dies gilt im Besonderen für das Wappen der Stadt Zwingenberg, das gemäß §§12, 1004 BGB geschützt ist. Die unberechtigte Verwendung kann zu Schadensersatzansprüchen und Unterlassungsansprüchen führen.</p>
+        </section>
+    </div>
+    <div class="container">
+        <h1 class="mt-4">Datenschutzerklärung</h1>
+
+        <section class="mt-4">
+            <h2>Datenschutzerklärung noch nicht weiter definiert</h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         </section>
     </div>
 
