--- a/impressum.html
+++ b/impressum.html
@@ -35,7 +35,7 @@
         <section class="mt-4">
             <h2>Realisierung</h2>
             <p>DHBW Mannheim<br>
-            WWI-21-EG/EH MIT</p>
+            WWI-21-EG/EH Gruppe: MIT</p>
         </section>
 
         <section class="mt-4">
