more header changes

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="jumbotron mit-lightblue text-center">
-      <h1 class="display-5 font-weight-bold">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+      <h1 class="display-5 ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
 
   <p>
