--- a/impressum.html
+++ b/impressum.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="jumbotron mit-lightblue text-center">
-        <h1 class="display-5 font-weight-bold">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+        <h1 class="display-5 font-weight-bold">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
       </div>
     <div class="container">
         <h1 class="mt-4">Impressum</h1>
