--- a/impressum.html
+++ b/impressum.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
     <title>Impressum</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
