--- a/einstellungen.html
+++ b/einstellungen.html
@@ -7,6 +7,30 @@
     <title>Einstellungen</title>
 </head>
 <body>
+    <div class="jumbotron mit-lightblue text-center">
+        <h1 class="display-5 ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+      </div>
+  
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav w-100 justify-content-between">
+              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link active mit-active" aria-current="page" href="main.html">Veranstaltungen</a>
+              </div>
+              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link" href="meineVeranstaltungen.html">Meine Veranstaltungen</a>
+              </div>
+              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link" href="einstellungen.html">Einstellungen</a>
+              </div>
+              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link" href="impressum.html">Impressum</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
     
 </body>
 </html>
