--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>Veranstaltungen Zwingenberg</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
 </head>
   <body>
     <div class="jumbotron mit-lightblue text-center">
