--- a/main.html
+++ b/main.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
   <body>
-    <div class="jumbotron mit-lightblue text-center">
-      <h1 class="display-5 ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+    <div class="jumbotron mit-lightblue text-center headpad">
+      <h1 class="display-5 fw-bold mit-active ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid justify-content-center">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active mit-active" aria-current="page" href="#">Veranstaltungen</a>
-                <a class="nav-link" href="#">Meine Veranstaltungen</a>
-                <a class="nav-link" href="#">Einstellungen</a>
+                <a class="nav-link active mit-active text-decoration-underline" aria-current="page" href="main.html">Veranstaltungen</a>
+                <a class="nav-link" href="meineVeranstaltungen.html">Meine Veranstaltungen</a>
+                <a class="nav-link" href="einstellungen.html">Einstellungen</a>
                 <a class="nav-link" href="impressum.html">Impressum</a>
             </div>
         </div>
