--- a/meineVeranstaltungen.html
+++ b/meineVeranstaltungen.html
@@ -10,8 +10,8 @@
     <title>Meine Veranstaltungen</title>
 </head>
 <body>
-  <div class="jumbotron mit-lightblue text-center">
-    <h1 class="display-5 ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+  <div class="jumbotron mit-lightblue text-center headpad">
+    <h1 class="display-5 fw-bold mit-active ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-light">
