--- a/main.html
+++ b/main.html
@@ -11,18 +11,25 @@
     <div class="jumbotron mit-lightblue text-center headpad">
       <h1 class="display-5 fw-bold mit-active ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
-
     <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid justify-content-center">
+      <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active mit-active text-decoration-underline" aria-current="page" href="main.html">Veranstaltungen</a>
-                <a class="nav-link" href="meineVeranstaltungen.html">Meine Veranstaltungen</a>
-                <a class="nav-link" href="einstellungen.html">Einstellungen</a>
-                <a class="nav-link" href="impressum.html">Impressum</a>
+          <div class="navbar-nav w-100 justify-content-between">
+            <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link active mit-active" aria-current="page" href="main.html">Veranstaltungen</a>
             </div>
+            <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link" href="meineVeranstaltungen.html">Meine Veranstaltungen</a>
+            </div>
+            <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link" href="einstellungen.html">Einstellungen</a>
+            </div>
+            <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link" href="impressum.html">Impressum</a>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
     </nav>
 
 
