Impressum Webmaster geändert

--- a/impressum.html
+++ b/impressum.html
@@ -52,9 +52,8 @@
 
         <section class="mt-4">
             <h2>Webmaster - Ansprechpartner für den Inhalt</h2>
-            <p>Herr Barthel Hauptamt/EDV der Stadt Zwingenberg</p>
-            <p>Telefon: 06251 - 7003-38<br>
-            E-Mail: <a href="mailto:webmaster@zwingenberg.de">webmaster@zwingenberg.de</a></p>
+            <p>DHBW Mannheim<br>
+              WWI-21-EG/EH Gruppe: MIT</p>
         </section>
 
         <section class="mt-4">
