header und nav angepasst, login erstellt

--- a/impressum.html
+++ b/impressum.html
@@ -10,24 +10,25 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="jumbotron mit-lightblue text-center headpad">
-        <h1 class="display-5 fw-bold mit-active ">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappem" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
-      </div>
-      <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="jumbotron mit-lightblue text-center headpad position-relative">
+        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="user.html">Login <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+    </div>
+      <nav class="navbar navbar-expand-md navbar-light py-sm-1">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav w-100 justify-content-between">
-              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link active mit-active" aria-current="page" href="main.html">Veranstaltungen</a>
+              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link " aria-current="page" href="main.html"><h6>Veranstaltungen</h6></a>
               </div>
-              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link" href="meineVeranstaltungen.html">Meine Veranstaltungen</a>
+              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
               </div>
-              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link" href="einstellungen.html">Einstellungen</a>
+              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link" href="einstellungen.html"><h6>Einstellungen</h6></a>
               </div>
-              <div class="pl-3 pr-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link" href="impressum.html">Impressum</a>
+              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+                <a class="nav-link mit-active" href="impressum.html"><h6>Impressum</h6></a>
               </div>
             </div>
           </div>
