--- a/einstellungen.html
+++ b/einstellungen.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link " aria-current="page" href="main.html"><h6>Veranstaltungen</h6></a>
+            <a class="nav-link " aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
