--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="login.css">
 </head>
   <body>
     <div class="jumbotron mit-lightblue text-center headpad position-relative">
@@ -37,13 +38,13 @@
 
     <h1>hier koennte ihre werbung stehen</h1>
 
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
+    <div class="card log-style">
+        <div class="card-body mit-lightblue">
           <h5 class="card-title">Silkes Titel</h5>
           <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="card-link text-muted" id="link-style">Passwort vergessen?</a>
+          <a href="#" class="card-link" id="link-style">Another link</a>
+          <button type="button" class="btn btn-primary">Neuen Account erstellen</button>
         </div>
       </div>
   </body>
