--- a/einstellungen.html
+++ b/einstellungen.html
@@ -66,8 +66,8 @@
                 
                 <form action="" id="accountLoeschenBestaetigung" class="mt-4">
                   <div class="form-group">
-                    <label for="lpasswort">Passwort eingeben, um Löschung zu bestätigen</label>
-                    <input type="password" id="lpasswort" name="lpasswort" class="form-control" placeholder="Passwort">
+                    <label for="lpasswort"><H4>Passwort eingeben, um Löschung zu bestätigen</H4></label>
+                    <input type="password" id="lpasswort" name="lpasswort" class="form-control custom-half-width" placeholder="Passwort">
                   </div>
                   <button id="buttonAccountLoeschen" type="button" class="btn btn-lg">Account unwiderruflich löschen</button>
                 </form>
