--- a/einstellungenAllgInfoBearbeiten.html
+++ b/einstellungenAllgInfoBearbeiten.html
@@ -96,7 +96,7 @@
           <div class="card-footer">
             <div class="row justify-content-between">
               <div class="col-6">
-                <button type="button" class="btn btn-secondary">Zurück</button>
+                <button type="button" class="btn btn-secondary" id="buttonzurückInformationenÄndern">Zurück</button>
               </div>
               <div class="col-6 text-end">
                 <button type="submit" class="btn" id="buttonspeichern">Speichern</button>
@@ -107,6 +107,8 @@
       </div>
     </div>
   </div>
+
+  <script src="einstellungenAllgInfo.js"></script>
 
 </body>
 </html>
