--- a/einstellungenPasswortAendern.html
+++ b/einstellungenPasswortAendern.html
@@ -67,7 +67,7 @@
           <div class="card-footer">
             <div class="row justify-content-between">
               <div class="col-6">
-                <button type="button" class="btn btn-secondary">Zurück</button>
+                <button type="button" class="btn btn-secondary" id="buttonzurückPasswortÄndern">Zurück</button>
               </div>
               <div class="col-6 text-end">
                 <button type="submit" class="btn" id="buttonspeichern">Passwort ändern</button>
@@ -79,5 +79,6 @@
     </div>
   </div>
 
+  <script src="einstellungenPasswort.js"></script>
 </body>
 </html>
