Type zu passwort geändert

--- a/einstellungenPasswortAendern.html
+++ b/einstellungenPasswortAendern.html
@@ -46,19 +46,19 @@
                 <div class="mb-3 row">
                     <label for="pwalt" class="col-sm-3 col-form-label">Altes Passwort:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="pwalt" name="pwalt" placeholder="Passwort">
+                      <input type="password" class="form-control" id="pwalt" name="pwalt" placeholder="Passwort">
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="pwneu1" class="col-sm-3 col-form-label">Neues Passwort:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="pwneu1" name="pwneu1" placeholder="Neues Passwort">
+                      <input type="password" class="form-control" id="pwneu1" name="pwneu1" placeholder="Neues Passwort">
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="pwneu2" class="col-sm-3 col-form-label">Neues Passwort:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="pwneu2" name="pwneu2" placeholder="Neues Passwort wiederholen">
+                      <input type="password" class="form-control" id="pwneu2" name="pwneu2" placeholder="Neues Passwort wiederholen">
                     </div>
                   </div>
                   
