--- a/einstellungen.html
+++ b/einstellungen.html
@@ -16,8 +16,13 @@
     <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
-  <nav class="navbar navbar-expand-md navbar-light py-sm-1">
+  <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
     <div class="container-fluid">
+      <!-- Hamburger-Menü -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Navigationslinks -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
@@ -81,6 +86,8 @@
   <!--Inhalt Ende-->
 
       
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+
   <script src="einstellungen.js"></script>
 </body>
 </html>
