--- a/einstellungenAllgInfoBearbeiten.html
+++ b/einstellungenAllgInfoBearbeiten.html
@@ -15,20 +15,25 @@
     <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
-  <nav class="navbar navbar-expand-md navbar-light py-sm-1">
+  <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
     <div class="container-fluid">
+      <!-- Hamburger-Menü -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Navigationslinks -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
-          <div class="mx-auto px-3">
-            <a class="nav-link" aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
+          <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+            <a class="nav-link " aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
           </div>
-          <div class="mx-auto px-3">
+          <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
           </div>
-          <div class="mx-auto px-3">
+          <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link mit-active" href="einstellungen.html"><h6>Einstellungen</h6></a>
           </div>
-          <div class="mx-auto px-3">
+          <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link" href="impressum.html"><h6>Impressum</h6></a>
           </div>
         </div>
@@ -42,53 +47,53 @@
         <div class="card">
           <div class="card-header mit-lightblue mit-blue fw-bold">Nutzerinformationen bearbeiten</div>
           <div class="card-body">
-            <form>
+            <form autocomplete="on">
                 <div class="mb-3 row">
                     <label for="vorname" class="col-sm-3 col-form-label">Vorname:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="vorname" name="vorname">
+                      <input type="text" class="form-control" id="vorname" name="vorname" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="nachname" class="col-sm-3 col-form-label">Nachname:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="nachname" name="nachname">
+                      <input type="text" class="form-control" id="nachname" name="nachname" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="straße" class="col-sm-3 col-form-label">Straße:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="straße" name="straße">
+                      <input type="text" class="form-control" id="straße" name="straße" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="hausnummer" class="col-sm-3 col-form-label">Hausnummer:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="hausnummer" name="hausnummer">
+                      <input type="text" class="form-control" id="hausnummer" name="hausnummer" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="postleitzahl" class="col-sm-3 col-form-label">Postleitzahl:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="postleitzahl" name="postleitzahl">
+                      <input type="text" class="form-control" id="postleitzahl" name="postleitzahl" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="ort" class="col-sm-3 col-form-label">Ort:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="ort" name="ort">
+                      <input type="text" class="form-control" id="ort" name="ort" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="telefonnummer" class="col-sm-3 col-form-label">Telefonnummer:</label>
                     <div class="col-sm-9">
-                      <input type="tel" class="form-control" id="telefonnummer" name="telefonnummer">
+                      <input type="tel" class="form-control" id="telefonnummer" name="telefonnummer" required>
                     </div>
                   </div>
                   <div class="mb-3 row">
                     <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" id="email" name="email">
+                      <input type="email" class="form-control" id="email" name="email" required>
                     </div>
                   </div>
             </form>
@@ -108,6 +113,7 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="einstellungenAllgInfo.js"></script>
 
 </body>
