--- a/impressum.html
+++ b/impressum.html
@@ -14,26 +14,31 @@
         <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login.html">Login <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
         <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
-      <nav class="navbar navbar-expand-md navbar-light py-sm-1">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav w-100 justify-content-between">
-              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link " aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
-              </div>
-              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
-              </div>
-              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link" href="einstellungen.html"><h6>Einstellungen</h6></a>
-              </div>
-              <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-                <a class="nav-link mit-active" href="impressum.html"><h6>Impressum</h6></a>
-              </div>
+    <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
+      <div class="container-fluid">
+        <!-- Hamburger-Menü -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navigationslinks -->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav w-100 justify-content-between">
+            <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link " aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
+            </div>
+            <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
+            </div>
+            <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link" href="einstellungen.html"><h6>Einstellungen</h6></a>
+            </div>
+            <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+              <a class="nav-link mit-active" href="impressum.html"><h6>Impressum</h6></a>
             </div>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 
     <div class="container">
         <h1 class="mt-4">Impressum</h1>
@@ -82,6 +87,8 @@
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         </section>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
    </body>
 </html>
