navbar wieder gefixt

--- a/einstellungen.html
+++ b/einstellungen.html
@@ -31,10 +31,17 @@
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
           </div>
+          <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+            <a class="nav-link mit-active" href="einstellungen.html"><h6>Einstellungen</h6></a>
+          </div>
+          <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
+            <a class="nav-link" href="impressum.html"><h6>Impressum</h6></a>
+          </div>
         </div>
       </div>
     </div>
   </nav>
+  
 
   <!--Inhalt-->
   <div class="container"> 
