--- a/einstellungenAllgInfoBearbeiten.html
+++ b/einstellungenAllgInfoBearbeiten.html
@@ -104,7 +104,7 @@
                 <button type="button" class="btn btn-secondary" id="buttonzurückInformationenÄndern">Zurück</button>
               </div>
               <div class="col-6 text-end">
-                <button type="submit" class="btn" id="buttonspeichern">Speichern</button>
+                <button type="submit" class="btn" id="buttonspeichern">Änderungen speichern</button>
               </div>
             </div>
           </div>
