--- a/loginVergessen.html
+++ b/loginVergessen.html
@@ -45,41 +45,40 @@
 
     <div class="container mt-5">
       <div class="row justify-content-center">
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-header mit-lightblue mit-blue fw-bold text-center">Login</div>
-              <div class="card-body">
-                <form autocomplete="on">
-                  <div class="mb-3 row">
-                    <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
-                    <div class="col-sm-9">
-                        <input type="email" class="form-control" id="email" name="email" required>
+          <div class="col-md-6">
+              <div class="card">
+                  <div class="card-header mit-lightblue mit-blue fw-bold text-center">Login</div>
+                  <div class="card-body">   
+                      <form autocomplete="on">
+                        <div class="mb-3">
+                            <p>Bitte geben Sie Ihre E-Mail-Adresse ein, um Ihnen einen Link zu senden mit dem Sie ihr Passwort zurücksetzten können:</p>
+                        </div>
+                        <div class="mb-3 row">
+                          <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
+                          <div class="col-sm-9">
+                              <input type="email" class="form-control" id="email" name="email" required>
+                          </div>
+                      </div>
+                      </form>
+                      <div class="text-center">
+                        <button type="submit" class="btn btn-success">Mail senden</button>
+                      </div>  
+                  </div>
+                  <div class="card-footer">
+                    <div class="row justify-content-between">
+                        <div class="col-6">
+                          <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
+                        </div>
+                        <div class="col-6 text-end">
+                            <button type="button" class="btn btn-primary">Neuen Account erstellen</button>
+                        </div>
                     </div>
                   </div>
-                  <div class="mb-3 row">
-                    <label for="passwort" class="col-sm-3 col-form-label">Passwort:</label>
-                    <div class="col-sm-9">
-                        <input type="password" class="form-control" id="passwort" name="passwort" required>
-                    </div>
-                  </div>
-                </form>
-                <div class="text-center">
-                  <button type="submit" class="btn btn-success">Anmelden</button>
-                    <div class="mt-3">
-                        <a href="loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
-                    </div>
-                </div>  
-                <div class="card-footer text-center">
-                  <button type="button" class="btn btn-primary" id="buttonNeuerAccount">Neuen Account erstellen</button>
-                </div>
               </div>
-            </div>
           </div>
-        </div>
-      </div>  
+      </div>
     </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-  <script src="login.js"></script>
+    <script src="login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   </body>
-  
 </html>
