--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
                 </form>
                 <div class="text-center">
                   <button type="submit" class="btn btn-success">Anmelden</button>
-                    <div class="mt-3">
+                    <div class="mt-2 mb-3">
                         <a href="loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
                     </div>
                 </div>  
