added line on hover

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login">Login <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
         <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
-
+<!-- Ab hier ist die Navbar -->
     <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
       <div class="container-fluid">
         <!-- Hamburger-Menü -->
@@ -41,7 +41,7 @@
       </div>
     </nav>
 
-    <h1>hier koennte ihre werbung stehen</h1>
+    <!-- Ab hier beginnt die Login-Card -->
 
     <div class="container mt-5">
       <div class="row justify-content-center">
