--- a/loginErstellen.html
+++ b/loginErstellen.html
@@ -11,7 +11,7 @@
 </head>
   <body>
     <div class="jumbotron mit-lightblue text-center headpad position-relative">
-        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login">Login <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login.html">Login <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
         <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
 
@@ -40,8 +40,6 @@
         </div>
       </div>
     </nav>
-
-    <h1>hier koennte ihre werbung stehen</h1>
 
     <div class="container mt-5">
       <div class="row justify-content-center">
@@ -75,7 +73,7 @@
           </div>
       </div>
     </div>
-    <script src="login.js"></script>
+    <script src="loginErstellen.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
