Text Account Löschen

--- a/einstellungen.html
+++ b/einstellungen.html
@@ -59,7 +59,11 @@
         <div class="card mb-3">
           <div class="card-body">
             <h2 class="card-title">Account Löschen</h2>
-            <p class="card-text">Lotta ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum...</p>
+            <p class="card-text">Bevor Sie fortfahren und Ihren Account löschen, ist es wichtig, die möglichen Konsequenzen zu verstehen: <br>
+
+              Durch das Löschen Ihres Accounts gehen Sie das Risiko eines dauerhaften Datenverlustes ein. Alle mit Ihrem Account verbundenen Daten, persönliche Informationen und Inhalte werden unwiderruflich gelöscht. Dies schließt den Verlust des Zugangs zu den Diensten und Funktionen ein, die mit Ihrem Account verknüpft sind.
+              
+              Bitte denken Sie sorgfältig über diese Konsequenzen nach, bevor Sie Ihren Account löschen. Wenn Sie Fragen haben oder Unterstützung benötigen, stehen wir Ihnen gerne zur Verfügung.</p>
             <form action="" id="accountLoeschenBestaetigung" class="mt-4">
               <div class="form-group">
                 <label for="lpasswort"><H4>Passwort eingeben, um Löschung zu bestätigen</H4></label>
