--- a/einstellungennichteingeloggt.html
+++ b/einstellungennichteingeloggt.html
@@ -59,7 +59,7 @@
 
   <!--Inhalt-->
   <h1 id="Nichteingeloggtmeldung">
-    Um Ihre Veranstaltungen einsehen zu können müssen Sie sich einloggen.
+    Um Ihre Einstellungen einsehen zu können müssen Sie sich einloggen.
   </h1>
   <div class="d-grid">
     <a href="login.html" class="btn btn-lg btn-block" id="loginlink">Login</a>
