button design in main.css definiert, passwort wird validiert

--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
                 </div>
               </div>
               <div class="card-footer text-center">
-                <button type="button" class="btn btn-primary" id="buttonNeuerAccount">Neuen Account erstellen</button>
+                <button type="button" class="btn btn-primary mit-btn" id="buttonNeuerAccount">Neuen Account erstellen</button>
               </div>
             </div>
           </div>
