--- a/loginVergessen.html
+++ b/loginVergessen.html
@@ -68,7 +68,7 @@
                           <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary">Neuen Account erstellen</button>
+                            <button type="button" class="btn btn-primary mit-btn">Neuen Account erstellen</button>
                         </div>
                     </div>
                   </div>
