--- a/loginErstellen.html
+++ b/loginErstellen.html
@@ -113,15 +113,16 @@
                             </div>
                         </div>
                         <div class="mb-3 row">
-                            <label for="passwort" class="col-sm-3 col-form-label">Passwort:</label>
+                            <label for="passwort_confirmation" class="col-sm-3 col-form-label">Passwort bestätigen:</label>
                             <div class="col-sm-9">
-                                <input type="password" class="form-control" id="passwort" name="passwort" required>
+                                <input type="password" class="form-control" id="passwort_confirmation" name="passwort_confirmation" required>
                             </div>
                         </div>
+                        
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             <label class="form-check-label" for="flexCheckDefault">
-                              Akzeptieren Sie die AGB?
+                                Indem Sie auf „Registrieren“ klicken, stimmen Sie unseren Nutzungsbedingungen zu. In unserer Datenschutzrichtlinie erfahren Sie, wie wir Ihre Daten erfassen, verwenden und teilen. Unsere Cookie-Richtlinie erklärt, wie wir Cookies und ähnliche Technologien verwenden.
                             </label>
                           </div>
                       </form>  
@@ -173,11 +174,12 @@
                             </div>
                         </div>
                         <div class="mb-3 row">
-                            <label for="passwort" class="col-sm-3 col-form-label">Passwort:</label>
+                            <label for="passwort_confirmation" class="col-sm-3 col-form-label">Passwort bestätigen:</label>
                             <div class="col-sm-9">
-                                <input type="password" class="form-control" id="passwort" name="passwort" required>
+                                <input type="password" class="form-control" id="passwort_confirmation" name="passwort_confirmation" required>
                             </div>
                         </div>
+                        
                         <hr>
                         <h4>Ansprechperson:</h4>
                         <div class="mb-3 row">
@@ -205,7 +207,7 @@
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             <label class="form-check-label" for="flexCheckDefault">
-                              Akzeptieren Sie die AGB?
+                                Indem Sie auf „Registrieren“ klicken, stimmen Sie unseren Nutzungsbedingungen zu. In unserer Datenschutzrichtlinie erfahren Sie, wie wir Ihre Daten erfassen, verwenden und teilen. Unsere Cookie-Richtlinie erklärt, wie wir Cookies und ähnliche Technologien verwenden.
                             </label>
                           </div>
 
@@ -217,7 +219,7 @@
                           <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary">Registrieren</button>
+                            <button type="button" class="btn btn-primary mit-btn" onclick="return validatePassword()">Registrieren</button>
                         </div>
                     </div>
                   </div>
