Grauen kasten entfernt

--- a/nutzerverwaltungadmin.html
+++ b/nutzerverwaltungadmin.html
@@ -45,7 +45,7 @@
     <!--Inhalt-->
     <div class="row">
         <div class="col-sm-3" id="seitlicheNavbar">
-            <nav class="navbar bg-light">
+            <nav class="navbar">
                 <div class="container-fluid">
                   <ul class="navbar-nav">
                         <li class="nav-item">
