--- a/Nutzer/Einstellungen/einstellungen.html
+++ b/Nutzer/Einstellungen/einstellungen.html
@@ -15,9 +15,9 @@
 
 <body>
   <div class="jumbotron mit-lightblue text-center headpad position-relative">
-    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="login.html">Login <img
-        src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
-    <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png"
+    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="../../Login/login.html">Login <img
+        src="../../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+    <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../../Bilder/ZwingenbergWappen.png"
         alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
@@ -47,7 +47,7 @@
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="impressum.html">
+            <a class="nav-link" href="../impressum.html">
               <h6>Impressum</h6>
             </a>
           </div>
