--- a/Nutzer/impressum.html
+++ b/Nutzer/impressum.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link" href="einstellungen.html"><h6>Einstellungen</h6></a>
+              <a class="nav-link" href="Einstellungen/einstellungen.html"><h6>Einstellungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
               <a class="nav-link mit-active" href="impressum.html"><h6>Impressum</h6></a>
