Fehler in der anzeige behoben

--- a/Nichteingeloggt/impressum.html
+++ b/Nichteingeloggt/impressum.html
@@ -42,12 +42,12 @@
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link mit-active" href="einstellungennichteingeloggt.html">
+            <a class="nav-link " href="einstellungennichteingeloggt.html">
               <h6>Einstellungen</h6>
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="impressum.html">
+            <a class="nav-link mit-active" href="impressum.html">
               <h6>Impressum</h6>
             </a>
           </div>
