--- a/Nichteingeloggt/meineVeranstaltungen.html
+++ b/Nichteingeloggt/meineVeranstaltungen.html
@@ -37,12 +37,12 @@
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="meineVeranstaltungen.html">
+            <a class="nav-link mit-active" href="meineVeranstaltungen.html">
               <h6>Meine Veranstaltungen</h6>
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link mit-active" href="einstellungennichteingeloggt.html">
+            <a class="nav-link" href="einstellungennichteingeloggt.html">
               <h6>Einstellungen</h6>
             </a>
           </div>
