--- a/Nichteingeloggt/veranstaltungen.html
+++ b/Nichteingeloggt/veranstaltungen.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../main.css">
-  <link rel="stylesheet" href="einstellungennichteingeloggt.css">
+  <link rel="stylesheet" href="veranstaltungen.css">
 
   <title>Einstellungen</title>
 </head>
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link " aria-current="page" href="veranstaltungen.html">
+            <a class="nav-link mit-active " aria-current="page" href="veranstaltungen.html">
               <h6>Veranstaltungen</h6>
             </a>
           </div>
@@ -42,7 +42,7 @@
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link mit-active" href="einstellungennichteingeloggt.html">
+            <a class="nav-link" href="einstellungennichteingeloggt.html">
               <h6>Einstellungen</h6>
             </a>
           </div>
