--- a/Nichteingeloggt/impressum.html
+++ b/Nichteingeloggt/impressum.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="impressum.css">
 
-  <title>Einstellungen</title>
+  <title>Impressum</title>
 </head>
 
 <body>
