--- a/Nichteingeloggt/meineVeranstaltungen.html
+++ b/Nichteingeloggt/meineVeranstaltungen.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="meineVeranstaltungen.css">
 
-  <title>Einstellungen</title>
+  <title>Meine Veranstaltungen</title>
 </head>
 
 <body>
