--- a/Nichteingeloggt/veranstaltungen.html
+++ b/Nichteingeloggt/veranstaltungen.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="veranstaltungen.css">
 
-  <title>Einstellungen</title>
+  <title>Veranstaltungen</title>
 </head>
 
 <body>
