--- a/Admin/Nutzerverwaltung/nutzerverwaltungadmin.html
+++ b/Admin/Nutzerverwaltung/nutzerverwaltungadmin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../main.css">
     <link rel="stylesheet" href="nutzerverwaltung.css">
-    <title>Meine Veranstaltungen</title>
+    <title>Nutzerverwaltung</title>
 </head>
 <body>
   <div class="jumbotron mit-lightblue text-center headpad position-relative">
