Fertigstellung Admin Ordner+grobe datei erstellung

--- a/Admin/Einstellungen/einstellungenAllgInfoBearbeiten.html
+++ b/Admin/Einstellungen/einstellungenAllgInfoBearbeiten.html
@@ -25,16 +25,16 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link " aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
+            <a class="nav-link " aria-current="page" href="../Veranstaltungen/veranstaltungen.html"><h6>Veranstaltungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
+            <a class="nav-link" href="../Nutzerverwaltung/nutzerverwaltungalle.html"><h6>Nutzerverwaltung</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link mit-active" href="einstellungen.html"><h6>Einstellungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="../impressum.html"><h6>Impressum</h6></a>
+            <a class="nav-link" href="../Impressum/impressum.html"><h6>Impressum</h6></a>
           </div>
         </div>
       </div>
