--- a/Admin/Einstellungen/einstellungen.html
+++ b/Admin/Einstellungen/einstellungen.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link " aria-current="page" href="../Veranstaltungen/">
+            <a class="nav-link " aria-current="page" href="../Veranstaltungen/veranstaltungen.html">
               <h6>Veranstaltungen</h6>
             </a>
           </div>
@@ -69,40 +69,16 @@
             <button id="buttonAllgInfoBearbeiten" type="button" class="btn btn-primary">Bearbeiten</button>
           </div>
         </div>
-          <div class="card mb-3">
-            <div class="card-body">
-              <h2 class="card-title">Passwort</h2>
-              <p class="card-text">Ein sicheres Passwort schützt Ihre Daten: </p>
-              <p class="card-text groeßererText">* * * * * * * * * * * *</p>
-              <button id="buttonPasswortaendern" type="button" class="btn btn-primary">Passwort ändern</button>
-            </div>
-          </div>
-      </div>
+      </div>  
+          
    
       <div class="col-md-6">
         <div class="card mb-3">
           <div class="card-body">
-            <h2 class="card-title">Account Löschen</h2>
-            <p class="card-text">Bevor Sie fortfahren und Ihren Account löschen, ist es wichtig, die möglichen
-              Konsequenzen zu verstehen: <br>
-
-              Durch das Löschen Ihres Accounts gehen Sie das Risiko eines dauerhaften Datenverlustes ein. Alle mit Ihrem
-              Account verbundenen Daten, persönliche Informationen und Inhalte werden unwiderruflich gelöscht. Dies
-              schließt den Verlust des Zugangs zu den Diensten und Funktionen ein, die mit Ihrem Account verknüpft sind.
-
-              Bitte denken Sie sorgfältig über diese Konsequenzen nach, bevor Sie Ihren Account löschen. Wenn Sie Fragen
-              haben oder Unterstützung benötigen, stehen wir Ihnen gerne zur Verfügung.</p>
-            <form action="" id="accountLoeschenBestaetigung" class="mt-4">
-              <div class="form-group">
-                <label for="lpasswort">
-                  <H4>Passwort eingeben, um Löschung zu bestätigen</H4>
-                </label>
-                <input type="password" id="lpasswort" name="lpasswort" class="form-control custom-half-width"
-                  placeholder="Passwort">
-              </div>
-              <button id="buttonAccountLoeschen" type="button" class="btn btn-danger">Account unwiderruflich
-                löschen</button>
-            </form>
+            <h2 class="card-title">Passwort</h2>
+            <p class="card-text">Ein sicheres Passwort schützt Ihre Daten: </p>
+            <p class="card-text groeßererText">* * * * * * * * * * * *</p>
+            <button id="buttonPasswortaendern" type="button" class="btn btn-primary">Passwort ändern</button>
           </div>
         </div>
       </div>
