Nutzer ordner fertig+ verlinkungen

--- a/Nutzer/Einstellungen/einstellungen.html
+++ b/Nutzer/Einstellungen/einstellungen.html
@@ -32,12 +32,12 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link " aria-current="page" href="veranstaltungen.html">
+            <a class="nav-link " aria-current="page" href="../Veranstaltungen/veranstaltugnen.html">
               <h6>Veranstaltungen</h6>
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="meineVeranstaltungen.html">
+            <a class="nav-link" href="../meineVeranstaltungen/meineVeranstaltungen.html">
               <h6>Meine Veranstaltungen</h6>
             </a>
           </div>
