--- a/Login/login.html
+++ b/Login/login.html
@@ -66,12 +66,12 @@
               
                   <button type="submit" class="btn btn-success" onclick="postLogin()">Anmelden</button>
                     <div class="mt-2 mb-2">
-                        <a href="../../../../../../Frontend_Integrationsseminar/Login/loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
+                        <a href="../Login/loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
                     </div>
                 </div>
               </div>
               <div class="card-footer text-center">
-                <button type="button" class="btn btn-primary mit-btn" id="buttonNeuerAccount" onclick="fetchAllVeranstaltungsgruppen()">Neuen Account erstellen</button>
+                <button type="button" class="btn btn-primary mit-btn" id="buttonNeuerAccount">Neuen Account erstellen</button>
               </div>
             </div>
           </div>
