--- a/Nutzer/Veranstaltungen/veranstaltungen.html
+++ b/Nutzer/Veranstaltungen/veranstaltungen.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link mit-active" aria-current="page" href="veranstaltugnen.html">
+            <a class="nav-link mit-active" aria-current="page" href="veranstaltungen.html">
               <h6>Veranstaltungen</h6>
             </a>
           </div>
@@ -59,11 +59,24 @@
 
 
   <!--Inhalt-->
-  <div class="container">
-    <div class="row" id="veranstaltungsgruppen">
-        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
-    </div>
-</div>
+  <div id="veranstaltungsgruppen-container">
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppen">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+  </div>
+  </div>
+
+  <div id="veranstaltungen-container" > <!--style="display: none;"-->
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppenDetails">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+  </div>
+  </div>
+
+
   
   <!--Inhalt Ende-->
 
