--- a/Nutzer/Einstellungen/einstellungenPasswortAendern.html
+++ b/Nutzer/Einstellungen/einstellungenPasswortAendern.html
@@ -76,6 +76,9 @@
           <div id="errorMessage" class="alert alert-danger" style="display: none">
               Fehler bei der Passwortänderung.
           </div>
+          <div id="passwordMismatch" class="alert alert-danger" style="display: none">
+            Die neuen Passwörter stimmen nicht überein.
+        </div>
           </div>
           <div class="card-footer">
             <div class="row justify-content-between">
