PW can be resetted

--- a/Login/loginVergessen.html
+++ b/Login/loginVergessen.html
@@ -59,7 +59,7 @@
                       </div>
                       </form>
                       <div class="text-center">
-                        <button type="submit" class="btn btn-success">Mail senden</button>
+                        <button type="button" class="btn btn-success" onclick="forgotPassword()">Mail senden</button>
                       </div>  
                   </div>
                   <div class="card-footer">
