--- a/Organisation/Einstellungen/einstellungen.html
+++ b/Organisation/Einstellungen/einstellungen.html
@@ -64,13 +64,12 @@
         <div class="card mb-3">
           <div class="card-body">
             <h2 class="card-title">Allgemeine Informationen</h2>
-            <p class="card-text">Lotta ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum... Lotta ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-              tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-              justo duo dolores et ea rebum...Lotta ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-              eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-              et justo duo dolores et ea rebum...</p>
+            <p class="card-text" id="vorname"></p>
+            <p class="card-text" id="nachname"></p>
+            <p class="card-text" id="anschrift"></p>
+            <p class="card-text" id="telefon"></p>
+            <p class="card-text" id="email"> </p>
+
             <button id="buttonAllgInfoBearbeiten" type="button" class="btn btn-primary">Bearbeiten</button>
           </div>
         </div>
